@@ -12,15 +12,15 @@ EBUILD thinking-sphinx-1.3.20.ebuild 817 RMD160 4369c1a9fb1a5aadd9d02b167aa97e10
 EBUILD thinking-sphinx-1.4.0.ebuild 817 RMD160 4369c1a9fb1a5aadd9d02b167aa97e1031234504 SHA1 53507365dcd870529deffec0a804a443d91a47d3 SHA256 f73be57cc8b067f0b2215a2cfcdae2c03fe449370e8f5476a9dde99afa76a213
 EBUILD thinking-sphinx-1.4.5.ebuild 813 RMD160 699dfcc8c3c81035c142a10df677df30e3216f56 SHA1 e5220123fdfb5b5965e3de0eedae61aba50cbd1c SHA256 c86fdea50475d74421b5545d9a7ae9cf4dce1d3b3c1188a3a04a95640543f306
 EBUILD thinking-sphinx-1.4.6.ebuild 813 RMD160 5947cd1b72b2d2aad73cb1de0ba6e82888c8f29e SHA1 2c64e308e683af25bbd67a99a042395290cbcb23 SHA256 d785e14370e9bc260bfa5340450fbe232f1a9089ed5c5582b7983080659c9f70
-EBUILD thinking-sphinx-2.0.10.ebuild 647 RMD160 58a78fcb8d19d6f8e94e5f4264bdc70463a68694 SHA1 fb9ab626dad90540e6b0089d8794fe79317c675d SHA256 a8af5a13de395b787fd86b8fd505194b3f8aab88ffbea7da47dd74d5c847f40f
+EBUILD thinking-sphinx-2.0.10.ebuild 694 RMD160 babf4aa49d3a9fd2b365af458717ab326b0cf56c SHA1 331dc3f37b698e0bc53d2988d1ecd748353f0c25 SHA256 ff401ef00a252ec516b16f1b2908cc60a4c58c55d0524143e9e5137bbac82c3f
 EBUILD thinking-sphinx-2.0.7.ebuild 647 RMD160 58a78fcb8d19d6f8e94e5f4264bdc70463a68694 SHA1 fb9ab626dad90540e6b0089d8794fe79317c675d SHA256 a8af5a13de395b787fd86b8fd505194b3f8aab88ffbea7da47dd74d5c847f40f
 EBUILD thinking-sphinx-2.0.9.ebuild 647 RMD160 58a78fcb8d19d6f8e94e5f4264bdc70463a68694 SHA1 fb9ab626dad90540e6b0089d8794fe79317c675d SHA256 a8af5a13de395b787fd86b8fd505194b3f8aab88ffbea7da47dd74d5c847f40f
-MISC ChangeLog 2592 RMD160 3b4af556450e7baf1cb583d048517bf2a1a3fc54 SHA1 ec9e00e38e469e9b26eace5e1feab93bba272a1a SHA256 b1a50f606211c5c09fd9c22061b78fff7d398a1846968f34953737ba40905960
+MISC ChangeLog 2712 RMD160 dfdec7406d992357a8e482bd85fd1cee08ca4205 SHA1 e8493e6e6b3428e123571d04261b03ebf70974a4 SHA256 2c1a03d1ffefcc598950fff1ec37f31a163c97134bdc7f60c58191b70f5bd060
 MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk7TrFoACgkQiIP6VqMIqNcjPQD/V2CL/dyMXsZbnXPcg4PV/z2a
-0rfEi0Vzc1SGUIcfo+oA+QHHT0YgWAfoQAFYhQipe3F1TAe251k25V0AfWMZwP1/
-=98Q5
+iF4EAREIAAYFAk7TsU4ACgkQiIP6VqMIqNdZ2wD+Ox54XoxWifcEaLQVDra7TSYy
+Rv5rR1cpmnm4Rdf6/IcA/1xxN3OshAjb8UHV9SiVP7QwlYwqqRSbkFMMPpbW4WhA
+=E/Vn
 -----END PGP SIGNATURE-----
