@@ -2,6 +2,10 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  28 Nov 2011; Hans de Graaff <graaff@gentoo.org>
+  thinking-sphinx-2.0.10.ebuild:
+  Update dependencies to match gem.
+
 *thinking-sphinx-2.0.10 (28 Nov 2011)
 
   28 Nov 2011; Hans de Graaff <graaff@gentoo.org>
